添加辅助工具

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,35 @@
 eclipse.preferences.version=1
 encoding//src/base/baseAdb.py=utf-8
-encoding//src/base/ele.py=utf-8
-encoding//src/base/operateElement.py=utf-8
-encoding//src/testcase/v722/openEmail.py=utf-8
-encoding//src/testcase/v722/openEmail2.py=utf-8
+encoding//src/base/baseConversion.py=utf-8
+encoding//src/base/baseFile.py=utf-8
+encoding//src/base/baseImage.py=utf-8
+encoding//src/base/baseOperate.py=utf-8
+encoding//src/base/baseTime.py=utf-8
+encoding//src/mail/mailOperation.py=utf-8
+encoding//src/otherApk/gt/csvData.py=utf-8
+encoding//src/otherApk/gt/gtutil.py=utf-8
+encoding//src/otherApk/power/powerAction.py=utf-8
+encoding//src/otherApk/record360/flowRecord.py=utf-8
+encoding//src/psam/psam.py=utf-8
+encoding//src/testcase/v722/brushFlow.py=utf-8
+encoding//src/testcase/v722/case/login.py=utf-8
+encoding//src/testcase/v722/case/openDown.py=utf-8
+encoding//src/testcase/v722/case/receive.py=utf-8
+encoding//src/testcase/v722/case/send.py=utf-8
+encoding//src/testcase/v722/easycase/login.py=utf-8
+encoding//src/testcase/v722/easycase/openDown.py=utf-8
+encoding//src/testcase/v722/easycase/public.py=utf-8
+encoding//src/testcase/v722/easycase/receive.py=utf-8
+encoding//src/testcase/v722/easycase/send.py=utf-8
+encoding//src/testcase/v722/easytimedelay.py=utf-8
+encoding//src/testcase/v722/loginFlow.py=utf-8
+encoding//src/testcase/v722/openEmail_filter.py=utf-8
+encoding//src/testcase/v722/peakValue.py=utf-8
+encoding//src/testcase/v722/standByFlowPowerMem.py=utf-8
 encoding//src/testcase/v722/timedelay.py=utf-8
+encoding//src/testcode/demo.py=utf-8
+encoding//src/testcode/tmp.py=utf-8
+encoding//src/testcode/tmp2.py=utf-8
+encoding//src/testcode/tmp3.py=utf-8
+encoding//src/testcode/tmp4.py=utf-8
+encoding/<project>=UTF-8
