添加数据加入到数据库

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,12 +5,14 @@ encoding//src/base/baseFile.py=utf-8
 encoding//src/base/baseImage.py=utf-8
 encoding//src/base/baseOperate.py=utf-8
 encoding//src/base/baseTime.py=utf-8
+encoding//src/db/mysql_db.py=utf-8
 encoding//src/mail/mailOperation.py=utf-8
 encoding//src/otherApk/gt/csvData.py=utf-8
 encoding//src/otherApk/gt/gtutil.py=utf-8
 encoding//src/otherApk/power/powerAction.py=utf-8
 encoding//src/otherApk/record360/flowRecord.py=utf-8
 encoding//src/psam/psam.py=utf-8
+encoding//src/testcase/runTest_v722.py=utf-8
 encoding//src/testcase/v722/brushFlow.py=utf-8
 encoding//src/testcase/v722/case/login.py=utf-8
 encoding//src/testcase/v722/case/openDown.py=utf-8
