--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -28,6 +28,7 @@ encoding//src/testcase/v722/peakValue.py=utf-8
 encoding//src/testcase/v722/standByFlowPowerMem.py=utf-8
 encoding//src/testcase/v722/timedelay.py=utf-8
 encoding//src/testcode/demo.py=utf-8
+encoding//src/testcode/demo2.py=utf-8
 encoding//src/testcode/tmp.py=utf-8
 encoding//src/testcode/tmp2.py=utf-8
 encoding//src/testcode/tmp3.py=utf-8
