--- a/src/user_db.ini
+++ b/src/user_db.ini
@@ -2,14 +2,14 @@
 user1=13580491603
 pwd1=chinasoft123
 user2=13697485262
-pwd2=chinasoft139
+pwd2=chinasoft123
 filename=test2M
 
 [mysqlconf]  
 host=127.0.0.1
 port=3306
 user=root
-password=root
+password=123456
 db_name=testmail
 
 [verconf]
