添加QQ邮箱性能测试

--- a/src/user_db.ini
+++ b/src/user_db.ini
@@ -4,6 +4,17 @@ pwd1=chinasoft123
 user2=13697485262
 pwd2=chinasoft123
 filename=test2M
+user3=18899734340
+pwd3=hy123456
+
+[qqconf]
+user1=2915673336
+pwd1=ctctest2014
+pwd11=rkupajbczeqgdgfc
+user2=1437384256
+pwd2=yscs56789
+user3=3495834281
+pwd3=chinasoft123
 
 [mysqlconf]  
 host=127.0.0.1
@@ -13,4 +24,4 @@ password=123456
 db_name=testmail
 
 [verconf]
-versionid=7311216
+versionid=7401218
