添加163邮箱性能测试

--- a/src/user_db.ini
+++ b/src/user_db.ini
@@ -4,7 +4,7 @@ pwd1=chinasoft123
 user2=13697485262
 pwd2=chinasoft123
 filename=test2M
-user3=18899734340
+user3=bieming188997
 pwd3=hy123456
 
 [qqconf]
@@ -15,6 +15,25 @@ user2=1437384256
 pwd2=yscs56789
 user3=3495834281
 pwd3=chinasoft123
+
+[netconf]
+user1=13427665104
+pwd1=yscs12345
+user2=18718878590
+pwd2=yscs12345
+user3=13580491603
+pwd3=chinasoft123
+
+[corp21cn]
+user1=13427665104
+pwd1=yscs987654
+user2=18718878590
+pwd2=yscs187
+user3=13580491603
+pwd3=chinasoft123
+user4=18718848534
+pwd4=yscs12345
+
 
 [mysqlconf]  
 host=127.0.0.1
